[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://matchup_pro.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0.388235, 0.415686, 0.658824, 1 )
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.5
margin_top = -0.749146
margin_right = 6.5
margin_bottom = -0.749146
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1027.0
margin_bottom = 614.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
margin_left = 253.144
margin_top = 0.707123
margin_right = 367.144
margin_bottom = 26.7071
rect_scale = Vector2( 4.93205, 6.2393 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/CenterContainer"]
margin_right = 114.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.886275, 0.839216, 0.466667, 1 )
custom_fonts/font = SubResource( 5 )
text = "Lost Hope"

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.727
margin_top = -49.8912
margin_right = 33.2735
margin_bottom = 56.1088
rect_scale = Vector2( 1.60427, 2.08 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 151.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( -60.8017, -1.39498 )
focus_mode = 0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Buttons"]
margin_top = 30.0
margin_right = 151.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( -60.8017, -1.39498 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="Buttons"]
margin_top = 60.0
margin_right = 151.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( -60.8017, -1.39498 )
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 90.0
margin_right = 151.0
margin_bottom = 116.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Buttons/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
